[gd_scene load_steps=11 format=3 uid="uid://fof1gf48aowp"]

[ext_resource type="Script" uid="uid://to4lao20jsy6" path="res://scripts/button.gd" id="1_rhj8v"]
[ext_resource type="Texture2D" uid="uid://5c18p7spiav6" path="res://assets/sprites/tilemap/monochrome_tilemap_transparent_packed.png" id="2_3q610"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rhj8v"]
atlas = ExtResource("2_3q610")
region = Rect2(80, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7y4x"]
atlas = ExtResource("2_3q610")
region = Rect2(80, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bdt2"]
atlas = ExtResource("2_3q610")
region = Rect2(64, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8m7bo"]
atlas = ExtResource("2_3q610")
region = Rect2(48, 128, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_t81cg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhj8v")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7y4x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bdt2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8m7bo")
}],
"loop": false,
"name": &"press",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_is61r"]
size = Vector2(14, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rhj8v"]
size = Vector2(14, 8)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_iw4ej"]
b = Vector2(14, 0)

[node name="Button" type="StaticBody2D"]
script = ExtResource("1_rhj8v")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_t81cg")
animation = &"press"
autoplay = "idle"

[node name="CollisionShapeDefault" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_is61r")

[node name="CollisionShapePressed" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_rhj8v")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-7, -17)
shape = SubResource("SegmentShape2D_iw4ej")
debug_color = Color(0.748691, 0.318767, 0.835682, 0.42)

[connection signal="body_entered" from="Area2D" to="." method="_on_button_press"]
